--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,17 @@ spring.application.name=miapi
 
 # Configuración de MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mi_basedatos?useSSL=false&serverTimezone=UTC
-spring.datasource.username=tu_usuario
-spring.datasource.password=tu_contraseña
+spring.datasource.username=root
+spring.datasource.password=
 
 # Configuración JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Puerto del servidor
 server.port=8080
+
+# Configuración de consola H2 (si querés usar memoria para pruebas)
+# spring.h2.console.enabled=true
