auth controller y ajustes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ server.port=8080
 
 # Configuración de consola H2 (si querés usar memoria para pruebas)
 # spring.h2.console.enabled=true
+
+#Spring Boot Actuator
+management.endpoints.web.exposure.include=*
