--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=miapi
 
 # Configuración de MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/mi_basedatos?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/mi_basedatos?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 # Configuración JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Puerto del servidor
 server.port=8080
@@ -19,3 +19,19 @@ server.port=8080
 
 #Spring Boot Actuator
 management.endpoints.web.exposure.include=*
+
+# ==================================================================================
+# ▶ application.properties   (perfil por defecto)
+# ==================================================================================
+spring.datasource.url=jdbc:h2:mem:demo_db        # <- URL de H2
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop        # crea el esquema al arrancar, lo borra al parar
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+# Habilita la consola web (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+spring.profiles.active=h2
