--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,13 @@ spring.jpa.show-sql=true
 # Habilita la consola web (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
 spring.profiles.active=h2
+
+# Guardar logs en un archivo
+logging.file.name=logs/app.log
+
+# Nivel de log (INFO, DEBUG, ERROR, etc.)
+logging.level.root=INFO
+
+# Formato simple
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
