--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,47 +1,30 @@
 spring.application.name=miapi
 
 # Configuración de MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/mi_basedatos?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración JPA
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# JPA y Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Puerto del servidor
 server.port=8080
 
-# Configuración de consola H2 (si querés usar memoria para pruebas)
-# spring.h2.console.enabled=true
-
-#Spring Boot Actuator
+# Spring Boot Actuator
 management.endpoints.web.exposure.include=*
-
-# ==================================================================================
-# ▶ application.properties   (perfil por defecto)
-# ==================================================================================
-spring.datasource.url=jdbc:h2:mem:demo_db        # <- URL de H2
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=create-drop        # crea el esquema al arrancar, lo borra al parar
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-
-# Habilita la consola web (http://localhost:8080/h2-console)
-spring.h2.console.enabled=true
-spring.profiles.active=h2
 
 # Guardar logs en un archivo
 logging.file.name=logs/app.log
-
-# Nivel de log (INFO, DEBUG, ERROR, etc.)
 logging.level.root=INFO
-
-# Formato simple
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Deshabilitar H2 completamente
+spring.h2.console.enabled=false
+
+# Perfil activo (opcional)
+spring.profiles.active=mysql
