--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@ spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA y Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Puerto del servidor
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 # Spring Boot Actuator
 management.endpoints.web.exposure.include=*
@@ -28,4 +28,7 @@ spring.h2.console.enabled=false
 
 # Perfil activo (opcional)
 spring.profiles.active=mysql
+
+app.default-password=${APP_DEFAULT_PASSWORD}
+jwt.secret=${JWT_SECRET}
 
