--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=miapi
 
 # Configuración de MySQL
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA y Hibernate
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Puerto del servidor
@@ -29,6 +29,7 @@ spring.h2.console.enabled=false
 # Perfil activo (opcional)
 spring.profiles.active=mysql
 
-app.default-password=${APP_DEFAULT_PASSWORD}
-jwt.secret=${JWT_SECRET}
+# Contraseña por defecto y JWT secret con valores de ejemplo
+app.default-password=${APP_DEFAULT_PASSWORD:123456}
+jwt.secret=${JWT_SECRET:pon_un_jwt_secret_largo_aqui}
 
