--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,13 @@ spring.profiles.active=mysql
 
 # Contraseña por defecto y JWT secret con valores de ejemplo
 app.default-password=${APP_DEFAULT_PASSWORD:123456}
-jwt.secret=${JWT_SECRET:pon_un_jwt_secret_largo_aqui}
+jwt.secret=${JWT_SECRET:MRkbn6wg,g'h87PV^Rqf;C<Z9<^;u$%h}
+
+# Configuración de OpenAPI/Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.packages-to-scan=com.poo.miapi.controller
 
