--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>miapi</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<name>miapi</name>
-	<description>Api tickets - Sistema de gestión de tickets con documentación Swagger</description>
+	<description>Api tickets - Sistema de gestión de tickets</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>24</java.version>
 		<maven.compiler.source>24</maven.compiler.source>
-    	<maven.compiler.target>24</maven.compiler.target>
+		<maven.compiler.target>24</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,13 +68,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>org.springframework.boot</groupId>
-    		<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.5.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
