--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- Hibernate Validator para Bean Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<!-- Para soporte de .env (opcional, si lo usas en Java) -->
 		<dependency>
 			<groupId>io.github.cdimascio</groupId>
