--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=miapi
 
 # Configuración de MySQL
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:}
+spring.datasource.url=jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=conde2312
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA y Hibernate
@@ -19,7 +19,9 @@ management.endpoints.web.exposure.include=*
 
 # Guardar logs en un archivo
 logging.file.name=logs/app.log
-logging.level.root=INFO
+logging.level.root=${LOGGING_LEVEL_ROOT:INFO}
+logging.level.com.poo.miapi=${LOGGING_LEVEL_COM_POO_MIAPI:INFO}
+logging.level.org.springframework.security=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY:INFO}
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
@@ -27,14 +29,19 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 spring.h2.console.enabled=false
 
 # Perfil activo (opcional)
-spring.profiles.active=mysql
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:mysql}
 
-# Contraseña por defecto y JWT secret con valores de ejemplo
-app.default-password=${APP_DEFAULT_PASSWORD:123456}
-jwt.secret=${JWT_SECRET:MRkbn6wg,g'h87PV^Rqf;C<Z9<^;u$%h}
+# Contraseña por defecto y JWT secret
+app.default-password=123456
+jwt.secret=miApi2025SecretKeyForAuthenticationTokenGeneration123456789
+jwt.expiration-ms=36000000
+
+# Configuración de archivos subidos
+spring.servlet.multipart.max-file-size=${FILE_UPLOAD_MAX_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${FILE_UPLOAD_MAX_SIZE:10MB}
 
 # Configuración de OpenAPI/Swagger
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
