--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ JWT_REFRESH_EXPIRATION_MS=86400000
 # ==============================================
 # CONFIGURACIÓN DE LA APLICACIÓN
 # ==============================================
-APP_DEFAULT_PASSWORD=your_default_password
+# APP_DEFAULT_PASSWORD=your_default_password  # Opcional: se genera automáticamente si no se define
 APP_NAME=API Tickets Management System
 APP_VERSION=1.0.0
 
