--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,10 @@ spring.h2.console.enabled=false
 # Perfil activo (opcional)
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:mysql}
 
-# Contraseña por defecto y JWT secret
-app.default-password=123456
-jwt.secret=miApi2025SecretKeyForAuthenticationTokenGeneration123456789
-jwt.expiration-ms=36000000
+# Contraseña por defecto y JWT secret (la contraseña se genera automáticamente si no está en .env)
+app.default-password=${APP_DEFAULT_PASSWORD:defaultPass123}
+jwt.secret=${JWT_SECRET:defaultSecretKey}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:36000000}
 
 # Configuración de archivos subidos
 spring.servlet.multipart.max-file-size=${FILE_UPLOAD_MAX_SIZE:10MB}
