--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=miapi
 
 # Configuración de MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=conde2312
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA y Hibernate
