--- a/.env.demo
+++ b/.env.demo
@@ -1,6 +1,6 @@
 # .env
-SPRING_DATASOURCE_URL=
-SPRING_DATASOURCE_USERNAME=
+SPRING_DATASOURCE_URL=DB_URL=jdbc:mysql://localhost:3306/apiticket?useSSL=false&serverTimezone=UTC
+SPRING_DATASOURCE_USERNAME=root 
 SPRING_DATASOURCE_PASSWORD=
 
 SPRING_JPA_HIBERNATE_DDL_AUTO=
@@ -8,4 +8,4 @@ SPRING_JPA_SHOW_SQL=
 
 SERVER_PORT=
 
-JWT_SECRET=
+JWT_SECRET=claveSuperSecreta12345678901234567890
