feat: Implement notification system with DTOs and repository
- Added NotificacionRequestDto for notification requests.
- Added NotificacionResumenDto for summarizing notifications.
- Created TipoIncidente enum for incident types.
- Developed ResumenTicketMensual entity for monthly ticket statistics.
- Implemented ResumenTicketMensualId class for composite key.
- Created NotificacionUsuario entity for user notifications.
- Established NotificacionCustomRepository for custom notification queries.
- Integrated quality gates configuration for Maven with Checkstyle, SpotBugs, JaCoCo, and SonarQube.
- Documented quality gates setup and CI/CD integration examples.
- Added optional advanced features for security and enterprise integration in phases extension documentation.

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,10 @@
 		<url/>
 	</scm>
 	<properties>
-	<java.version>24</java.version>
-	<maven.compiler.source>24</maven.compiler.source>
-	<maven.compiler.target>24</maven.compiler.target>
+		<java.version>24</java.version>
+		<maven.compiler.source>24</maven.compiler.source>
+		<maven.compiler.target>24</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -142,7 +143,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
-					<skipTests>true</skipTests>
+					<skipTests>false</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
