--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Deshabilitar H2 completamente
 spring.h2.console.enabled=false
 
-# Perfil activo (opcional)
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:mysql}
+# Perfil activo (por defecto: dev)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Contraseña por defecto y JWT secret (la contraseña se genera automáticamente si no está en .env)
 app.default-password=${APP_DEFAULT_PASSWORD:defaultPass123}
